            - Renamed simplifiedFundamentalGroup to setGroupPresentation().
              The old name is deprecated but kept for backwards compatibility.
            - Overhaul of the internal change span classes, including a new
              inner class ChangeAndClearSpan.
        Class Triangulation<2>:
            - New routine twoZeroMove().
        Class Triangulation<3>:
            - Renamed intelligentSimplify() to simplify().  The old name is
              kept as a deprecated alias.
            - Routine puncture() now takes an optional triangle, not an
              optional tetrahedron.  The old version is kept but deprecated.
            - Routine insertLayeredSolidTorus() is now non-recursive, and
              throws an exception if its preconditions fail.
            - Routines layerOn(), pinchEdge(), puncture(), turaevViro() and
              turaevViroApprox() now throw an exception if their preconditions
              fail.
            - Routine reorderTetrahedraBFS() is now a deprecated alias for
              reorderBFS() (which is available in all dimensions).
            - Routine idealToFinite() no longer subdivides the triangulation
              if there are invalid edges but no vertices to truncate.
            - Routines hasStrictAngleStructure(), hasGeneralAngleStructure(),
              strictAngleStructure() and generalAngleStructure() have changed
              their behaviour for the empty triangulation: they now return the
              empty angle structure as a solution (since, strictly speaking,
              the empty structure is both strict and taut).
            - Fixed an issue with zeroTwoMove(edge, t0, t1) where: if the given
              edge was valid and boundary, and if t0 and/or t1 was exactly the
              edge degree, and if the routine was asked to check legality, then
              the move would be incorrectly reported as illegal.  (This was